--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   min-height: 100vh;
-  background-color: #e493d0;
+  background-color: #3b2d40;
   background-image: 
-    radial-gradient(closest-side, rgba(235, 105, 78, 1), rgba(235, 105, 78, 0)),
-    radial-gradient(closest-side, rgba(243, 11, 164, 1), rgba(243, 11, 164, 0)),
-    radial-gradient(closest-side, rgba(254, 234, 131, 1), rgba(254, 234, 131, 0)),
-    radial-gradient(closest-side, rgba(170, 142, 245, 1), rgba(170, 142, 245, 0)),
-    radial-gradient(closest-side, rgba(248, 192, 147, 1), rgba(248, 192, 147, 0));
+      radial-gradient(closest-side, rgba(102, 42, 42, 1), rgba(102, 42, 42, 0)),
+      radial-gradient(closest-side, rgba(128, 0, 64, 1), rgba(128, 0, 64, 0)),
+      radial-gradient(closest-side, rgba(128, 96, 0, 1), rgba(128, 96, 0, 0)),
+      radial-gradient(closest-side, rgba(85, 47, 128, 1), rgba(85, 47, 128, 0)),
+      radial-gradient(closest-side, rgba(102, 64, 51, 1), rgba(102, 64, 51, 0));
   background-size: 
     130vmax 130vmax,
     80vmax 80vmax,
