--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   min-height: 100vh;
-  background-color: #3b2d40;
+  background-color: #1a2738;
   background-image: 
-      radial-gradient(closest-side, rgba(102, 42, 42, 1), rgba(102, 42, 42, 0)),
-      radial-gradient(closest-side, rgba(128, 0, 64, 1), rgba(128, 0, 64, 0)),
-      radial-gradient(closest-side, rgba(128, 96, 0, 1), rgba(128, 96, 0, 0)),
-      radial-gradient(closest-side, rgba(85, 47, 128, 1), rgba(85, 47, 128, 0)),
-      radial-gradient(closest-side, rgba(102, 64, 51, 1), rgba(102, 64, 51, 0));
+      radial-gradient(closest-side, rgba(28, 61, 102, 1), rgba(28, 61, 102, 0)),
+      radial-gradient(closest-side, rgba(10, 40, 85, 1), rgba(10, 40, 85, 0)),
+      radial-gradient(closest-side, rgba(31, 98, 128, 1), rgba(31, 98, 128, 0)),
+      radial-gradient(closest-side, rgba(47, 65, 128, 1), rgba(47, 65, 128, 0)),
+      radial-gradient(closest-side, rgba(35, 51, 102, 1), rgba(35, 51, 102, 0));
   background-size: 
     130vmax 130vmax,
     80vmax 80vmax,
