--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
   font-family: 'Quicksand', sans-serif;
   margin: 0;
   min-height: 100vh;
-  background-color: #1a2738;
+  background-color: #e493d0;
   background-image: 
-      radial-gradient(closest-side, rgba(28, 61, 102, 1), rgba(28, 61, 102, 0)),
-      radial-gradient(closest-side, rgba(10, 40, 85, 1), rgba(10, 40, 85, 0)),
-      radial-gradient(closest-side, rgba(31, 98, 128, 1), rgba(31, 98, 128, 0)),
-      radial-gradient(closest-side, rgba(47, 65, 128, 1), rgba(47, 65, 128, 0)),
-      radial-gradient(closest-side, rgba(35, 51, 102, 1), rgba(35, 51, 102, 0));
+    radial-gradient(closest-side, rgba(235, 105, 78, 1), rgba(235, 105, 78, 0)),
+    radial-gradient(closest-side, rgba(243, 11, 164, 1), rgba(243, 11, 164, 0)),
+    radial-gradient(closest-side, rgba(254, 234, 131, 1), rgba(254, 234, 131, 0)),
+    radial-gradient(closest-side, rgba(170, 142, 245, 1), rgba(170, 142, 245, 0)),
+    radial-gradient(closest-side, rgba(248, 192, 147, 1), rgba(248, 192, 147, 0));
   background-size: 
     130vmax 130vmax,
     80vmax 80vmax,
