--- a/style.css
+++ b/style.css
@@ -57,6 +57,21 @@ span {
     0px 0px 1px rgba(255, 255, 255, .6),
     0px 4px 4px rgba(0, 0, 0, .05);
   letter-spacing: .2rem;
+  animation-name: title_move;
+  animation-duration: 2s;
+  animation-timing-function: linear;
+  animation-delay: 2s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+}
+
+@keyframes title_move{
+  from {
+    top: 0px;
+  }
+  to {
+    top: 30px;
+  }
 }
 
 @keyframes movement {
