--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ span {
   animation-duration: 2s;
   animation-timing-function: linear;
   animation-delay: 2s;
-  animation-iteration-count: infinite;
+  animation-iteration-count: 1;
   animation-fill-mode: both;
 }
 
@@ -70,7 +70,7 @@ span {
     bottom: 0px;
   }
   to {
-    bottom: 30px;
+    bottom: 150px;
   }
 }
 
